--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ dj-rest-auth==5.0.1
 Django==4.0
 django-allauth==0.57.0
 django-cors-headers==4.2.0
+django-filter==23.4
+django-rest-auth==0.9.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 idna==3.4
@@ -20,6 +22,7 @@ python3-openid==3.2.0
 pytz==2023.3.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 urllib3==2.0.6
